--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <div class="headerdiv">
+        <header class="header">
+            <h1 class="header-text">
+                <a href="./index2.html" target="blank"></a>
+                <a href="./index3.html" target="blank"></a>
+                <a href="https://youtu.be/iFvcL1X47UI" target="blank"></a>
+            </h1>
+            <img src="./img/fallout_4_2015-HD.jpg" alt="Logo">
+        </header>
+    </div>
+    <div class="navdiv">
+        <nav class="nav">
+            <h2>This is the Site</h2>
+        </nav>
+    </div>
+
+    <!-- Content -->
+    <div class="content">
+        
+    </div>
 </body>
 </html>
